--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chess-moments",
   "version": "0.11.0",
-  "description": "PGN reader is a javascript chess library that transforms PGN files into chess moments",
+  "description": "PGN parser that transforms PGN files into chess \"moments\"",
   "main": "dist/index.js",
   "files": [
     "index.js",
