--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "chess.js": "1.2.0"
+    "chess.js": "file:modules/chess.js-1.2.0.tgz"
   },
   "devDependencies": {
     "chai": "^4.3.7",
