--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "files": [
     "index.js",
     "chess.js",
-    "functions/*.js"
+    "functions/**/*.js"
   ],
   "scripts": {
     "test": "mocha",
