--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "files": [
     "index.js",
     "chess.js",
-    "functions/**/*.js"
+    "functions/**/*.js",
+    "constants/**/*.js"
   ],
   "scripts": {
     "test": "mocha",
@@ -24,7 +25,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "chess.js": "github:jhlywa/chess.js#master"
+    "chess.js": "github:brobert1/chess.js#master"
   },
   "devDependencies": {
     "chai": "^4.3.7",
